--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,6 @@
         "matches": [ "<all_urls>" ]
     }],
     "browser_action": {
-        "default_icon": {
-           //  
-        }
+        "default_icon": {}
     }
   }
